test/expected/regression-http-close.txt
/scripts/regression-http-close.js:21
        throw new Error('trace');
        ^

Error: trace
    at Server.close (/scripts/regression-http-close.js:21:15)
    at Server.g (events.js:261:16)
    at emitNone (events.js:68:13)
    at Server.emit (events.js:167:7)
    at emitCloseNT (net.js:1525:8)
    at nextTickCallbackWith1Arg (node.js:444:9)
    at process._tickCallback (node.js:366:17)
    at Server._emitCloseIfDrained (net.js:1519:11)
    at Server.close (net.js:1503:10)
    at IncomingMessage.end (/scripts/regression-http-close.js:20:14)
    at IncomingMessage.g (events.js:261:16)
    at emitNone (events.js:73:20)
    at IncomingMessage.emit (events.js:167:7)
    at endReadableNT (_stream_readable.js:906:12)
    at nextTickCallbackWith2Args (node.js:455:9)
    at process._tickCallback (node.js:369:17)
    at endReadable (_stream_readable.js:897:13)
    at IncomingMessage.Readable.read (_stream_readable.js:358:5)
    at flow (_stream_readable.js:744:26)
    at resume_ (_stream_readable.js:724:3)
    at nextTickCallbackWith2Args (node.js:455:9)
    at process._tickCallback (node.js:369:17)
    at resume (_stream_readable.js:712:13)
    at IncomingMessage.Readable.resume (_stream_readable.js:704:5)
    at IncomingMessage.Readable.on (_stream_readable.js:671:10)
    at ClientRequest.get (/scripts/regression-http-close.js:17:9)
    at ClientRequest.g (events.js:261:16)
    at emitOne (events.js:78:13)
    at ClientRequest.emit (events.js:170:7)
    at HTTPParser.parserOnIncomingClient (_http_client.js:422:21)
    at HTTPParser.parserOnHeadersComplete (_http_common.js:89:23)
    at Socket.socketOnData (_http_client.js:312:20)
    at emitOne (events.js:78:13)
    at Socket.emit (events.js:170:7)
    at readableAddChunk (_stream_readable.js:147:16)
    at Socket.Readable.push (_stream_readable.js:111:10)
    at TCP.onread (net.js:524:20)
    at Socket.connect (net.js:890:40)
    at Agent.exports.connect.exports.createConnection (net.js:64:35)
    at Agent.createSocket (_http_agent.js:175:16)
    at Agent.addRequest (_http_agent.js:144:23)
    at new ClientRequest (_http_client.js:140:16)
    at Object.exports.request (http.js:32:10)
    at Object.exports.get (http.js:36:21)
    at Server.listen (/scripts/regression-http-close.js:16:8)
    at Server.g (events.js:261:16)
    at emitNone (events.js:68:13)
    at Server.emit (events.js:167:7)
    at emitListeningNT (net.js:1264:10)
    at nextTickCallbackWith1Arg (node.js:444:9)
    at process._tickCallback (node.js:366:17)
    at Server._listen2 (net.js:1252:11)
    at listen (net.js:1274:10)
    at net.js:1383:9
    at GetAddrInfoReqWrap.asyncCallback [as callback] (dns.js:64:16)
    at GetAddrInfoReqWrap.onlookup [as oncomplete] (dns.js:83:10)
    at Object.lookup (dns.js:166:19)
    at listenAfterLookup (net.js:1378:20)
    at Server.listen (net.js:1374:5)
    at Object.<anonymous> (/scripts/regression-http-close.js:12:4)
    at Module._compile (module.js:399:26)
    at Object.Module._extensions..js (module.js:406:10)
    at Module.load (module.js:345:32)
    at Function.Module._load (module.js:302:12)
    at Function.Module.runMain (module.js:431:10)
    at startup (node.js:141:18)
    at node.js:977:3
